--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,21 @@ copyright_holder = Jonas B. Nielsen
 
 [VersionFromModule]
 
+[ExtraTests]
+
+[Test::Perl::Critic]
+
+[PodCoverageTests]
+
+[PodSyntaxTests]
+
+[Test::Kwalitee]
+
+[Test::Compile]
+fail_on_warning = none
+
+[Test::CPAN::Changes]
+
 [ModuleBuild]
 mb_version = 0.30
 
