--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,8 @@ fail_on_warning = none
 [ModuleBuild]
 mb_version = 0.30
 
+[MetaJSON]
+
 [Prereqs]
 Test::More                = 0
 File::Slurp               = 0
