Updated Dist::Zilla configuration to contemporary version from my Gist

--- a/dist.ini
+++ b/dist.ini
@@ -5,13 +5,15 @@ copyright_holder = Jonas B. Nielsen
 
 [@Basic]
 
-[GitHub::Meta]
-
 [VersionFromModule]
+
+[GitHub::Meta]
+issues = 1 ; enabling issues on github
 
 [ExtraTests]
 
 [Test::Perl::Critic]
+critic_config = t/perlcriticrc
 
 [PodCoverageTests]
 
@@ -29,11 +31,16 @@ mb_version = 0.30
 
 [MetaJSON]
 
+; Ref: http://blogs.perl.org/users/ovid/2014/03/a-simple-distini-for-distzilla.html
+[ ReadmeAnyFromPod / MarkdownInRoot ]
+filename = README.mkdn
+
+[MetaProvides::Package]
+inherit_version = 0    ;optional flag
+inherit_missing = 0    ;optional flag
+meta_noindex    = 1    ;optional flag
+
 [Prereqs]
-Test::More                = 0
-File::Slurp               = 0
-Test::Exception           = 0
-Test::MockObject::Extends = 0
 Env                       = 0
 Data::Dumper              = 0
 WWW::Mechanize            = 0
@@ -42,8 +49,13 @@ Carp                      = 0
 Try::Tiny                 = 0
 perl                      = 5.008
 
-[MetaResources]
-repository.web  = https://github.com/jonasbn/dand
-repository.url  = https://github.com/jonasbn/dand.git
-repository.type = git
-homepage        = http://logicLAB.jira.com/browse/DAND
+[Prereqs / TestRequires]
+Test::More                = 0
+File::Slurp               = 0
+Test::Exception           = 0
+Test::MockObject::Extends = 0
+Test::More                = 0.88
+Test::Kwalitee            = 1.21 ; from Dist::Zilla
+Pod::Coverage::TrustPod   = 0    ; from Dist::Zilla
+Test::Pod                 = 1.41 ; from Dist::Zilla
+Test::Pod::Coverage       = 1.08 ; from Dist::Zilla
